# streaming-avatar-legacy

./: .gitignore  README.md  pyproject.toml
src/streaming_avatar/models/musetalk/: __init__.py  musetalk.py  positional_encoding.py  preprocess.py
src/streaming_avatar/models/musetalk/face_parsing/: __init__.py  bisenet.py  face_parsing.py  resnet.py
src/streaming_avatar/models/whisper/: __init__.py  audio_utils.py  whisper.py
